--- a/pe2/src/components/header/header.css
+++ b/pe2/src/components/header/header.css
@@ -52,6 +52,7 @@
       flex-direction: column;
       align-items: center;
       padding: 1rem 0;
+      z-index: 10;
     }
   
     .nav.nav-open {
