--- a/pe2/src/pages/styles/Home.css
+++ b/pe2/src/pages/styles/Home.css
@@ -50,4 +50,64 @@
   .hero-button:hover {
     background-color: #0056b3;
   }
+
+  /* MAIN SECTION ON HOMEPAGE */
+
+  .h1-main-section{
+    display: flex;
+    justify-content: center;
+  }
+
+  .main-section, .main-section2 {
+    padding: 50px;
+    text-align: center;
+    background-color: #f9f9f9;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 10px;
+  }
+
+  .box1, .box2, .box3{
+    border: 2px solid green;
+    padding: 10px;
+  }
+  
+  .new-section h2 {
+    font-size: 2em;
+    color: #333;
+  }
+  
+  .new-section p {
+    font-size: 1.2em;
+    color: #666;
+  }
+  
+  .new-section-button {
+    padding: 10px 20px;
+    font-size: 1em;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .new-section-button:hover {
+    background-color: #0056b3;
+  }
+
+    /* MAIN SECTION 2 ON HOMEPAGE */
+
+    .box1 img, .box2 img, .box3 img {
+      width: 300px;
+      height: 300px;
+    }
+
+    .ticketButton {
+      display: flex;
+      justify-content: center;
+    }
+    
+  
   
